[FIX] web_enterprise: Dialog footer buttons' spacing on mobile
This commit is a follow-up of its community counterpart in PR
https://github.com/odoo/odoo/pull/87633 , in which this rule was moved.

task-2792884

closes odoo/enterprise#27337

X-original-commit: 7498fb3f7472c053df60d2f264b3acf19f6b54b0
Related: odoo/odoo#91371

--- a/web_enterprise/static/src/legacy/scss/modal_mobile.scss
+++ b/web_enterprise/static/src/legacy/scss/modal_mobile.scss
@@ -11,8 +11,6 @@
             }
 
             .modal-footer {
-                justify-content: space-around;
-
                 .btn {
                     width: 45%;
                     text-overflow: ellipsis;
